# fastapi-clean-architecture

./: .env.example  README.md  docker-compose.yaml  dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 29b97f5e8b48_domain_created2.py  300c9d8fafb0_domain_created.py  bd73d4b9cc3e_removed_user.py  de02b6625a00_initial_migration.py
src/: main.py
src/api/: api_router.py
src/api/http/: api_router.py
src/api/http/v1/: router.py
src/api/http/v1/endpoints/: domain_router.py
src/api/v1/: router.py
src/core/: config.py
src/core/app/: app_creator.py  lifespan.py
src/core/connections/: cache.py  connection.py  database.py  postgres_connection.py  redis_connection.py
src/models/: __init__.py  domain_model.py  user.py
src/repositories/: base_repositiry.py  domain_repository.py
src/schemas/: base_schema.py  domain_schema.py
src/usecases/: base_usecase.py  domain_usecase.py
src/utils/: model_adapter.py
