[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = [
    {name = "mkhmtolzhas",email = "mkhmtcore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "redis (>=5.2.1,<6.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry]
package-mode = false
packages = [{include = "fastapi_boilerplate", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
